--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -42,7 +46,7 @@
         </div>
         <div class="test-1">
     
-            <h1 class="header-2"> Strawberry Poison Dart Frog </h1>
+            <h1 class="header-2"> Red Poison Dart Frog </h1>
             <img src="img/strawberry-poison-frog.jpg", class="img-1">
             <p class="text-1"> This frog is stawberry-red colored and dangerous.</p>
     
