--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <h1 class="header-2"> Red Eyed Tree Frog </h1>
             <img src="img/RedEyedTreeFrog.jpg", class="img-1">
             <p class="text-1"> This thing has red eyes.</p>
+            <a href="nothing" class="button-1">Click Me</a>
     
         </div>
 
